/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2020-12-09 16:50 UTC+0100 Wilfried Brunken DF7BE
  * doc/hwgdoc_classes.html
  * doc/hwgdoc_commands.html
  * include/hwingui.h
  * samples/dev/env/pfad.bat
  * samples/sample.hbp
  * whatsnew.txt
    ! Ticket #67
    ! (include\hwingui.h)
    ! #define WINVER  0x0500 changed to 0x0502 
    ! Adapted path for MinGW32 (internal):
    ! C:\MinGW32
    ! Docu updated for:
    ! SHADEBUTTON and NICEBUTTON,
    ! classes HShadeButton and HNiceButton
    ! (Windows only).
    ! Ticket #72: (Remarks by Oleksii Myronenko)
    ! Inline descriptive comments for alternative usage of
    ! hbc parameters (sample.hbp). 


2020-12-06 21:50 UTC+0100 Wilfried Brunken DF7BE
  * samples/testhgt.hbp (New)
  * samples/testhgt.prg (New)
  * samples/Readme.txt
  * doc/hwgdoc_commands.html
    ! Ticket #27: Simplified sample
    ! Harbour gtwvg usage suggested
    ! by José M. C. Quintas,
    ! but Harbour gtwvg is Windows only
    ! Docu: SHADEBUTTON is Windows only

2020-12-05 21:50 UTC+0100 Wilfried Brunken DF7BE
  * samples/Readme.txt
  * samples/gtk_samples/Readme.txt
  * samples/gtk_samples/sample.hbp (New)
  * samples/sample.hbp (New)
  * utils/bincnt/bincnt.hbp
  * utils/bincnt/file2hex.hbp
  * utils/dbc/dbchw.hbp
  * utils/debugger/hwgdebug.hbp
  * utils/designer/designer.hbp
  * utils/tutorial/hwgrun.hbp
  * utils/tutorial/tutor.hbp
  * samples/gtk_samples/gtk_sample.hbp (Deleted)
  * utils/bincnt/bincnt_linux.hbp (Deleted)
  * utils/dbc/dbc_linux.hbp (Deleted)
  * utils/debugger/debugger_linux.hbp (Deleted)
  * utils/designer/designer_linux.hbp (Deleted)
  * utils/tutorial/hwgrun_linux.hbp (Deleted)
  * utils/tutorial/tutor_linux.hbp (Deleted)
    ! Ticket #72: hbp files for compile with hbmk2
    ! for Windows and LINUX working 
    ! delivered by José M. C. Quintas (TNX)