@@ -1402,7 +1402,11 @@
        <li><a name="_Commands5-1" href="#Commands5-1">4.5.1.  INIT PRINTER</a>
        <li><a name="_Commands5-2" href="#Commands5-2">4.5.2.  INIT DEFAULT PRINTER</a>
      </ul>	
-
+    <p>
+    Attention !<br>
+    Some trouble with printing of bitmaps, for details see class documentation of<br>
+    CLASS HWINPRN !<br>
+    </p>
     <br><a name="Commands5-1" href="#_Commands5-1">
     4.5.1. INIT PRINTER </a>
     <p></p>
